--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ALAB DOM Manipulation</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
     <script defer src="./index.js"></script>
     <meta charset="UTF-8" />
   </head>
@@ -10,9 +10,10 @@
   <body>
     <header>
       <nav id="top-menu"></nav>
+
+      <!-- Add the <nav> element below -->
+      <nav id="sub-menu"></nav>
     </header>
     <main></main>
-
-
   </body>
 </html>
